--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,12 @@
             "request": "launch",
             "mainClass": "${fileBasenameNoExtension}",
             "vmArgs": "-enableassertions"
+        },
+        {
+            "type": "java",
+            "name": "Launch Mastermind",
+            "request": "launch",
+            "mainClass": "Mastermind"
         }
     ]
 }
