--- a/.github/workflows/mastermind.yml
+++ b/.github/workflows/mastermind.yml
@@ -1,5 +1,18 @@
 name: CI for ICS4U Culminating Project Mastermind
-on: [push]
+
+on:
+  push:
+    branches: ["main"]
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
@@ -11,3 +24,40 @@ jobs:
         run: |
           cd culminating-mastermind
           ./gradlew test
+
+  gh-pages:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set Up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.4.1"
+          bundler-cache: true
+          cache-version: 0
+
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Build with Jekyll
+        run: |
+          cd culminating-mastermind/docs
+          bundle install
+          bundle exec jekyll build
+        env:
+          JEKYLL_ENV: production
+
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v5
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: culminating-mastermind/docs/_site
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
