--- a/.github/workflows/mastermind.yml
+++ b/.github/workflows/mastermind.yml
@@ -25,12 +25,30 @@ jobs:
           cd culminating-mastermind
           ./gradlew test
 
-  gh-pages:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  javadocs:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Build javadoc
+        continue-on-error: true
+        run: |
+          cd culminating-mastermind
+          ./gradlew javadoc
+
+      - name: Upload javadoc
+        uses: actions/upload-artifact@v4
+        with:
+          name: javadoc
+          path: culminating-mastermind/app/build/docs/javadoc
+
+  wiki:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Set Up Ruby
         uses: ruby/setup-ruby@v1
         with:
@@ -38,16 +56,33 @@ jobs:
           bundler-cache: true
           cache-version: 0
 
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Build with Jekyll
+      - name: Build wiki
         run: |
           cd culminating-mastermind/docs
           bundle install
           bundle exec jekyll build
         env:
           JEKYLL_ENV: production
+
+      - name: Upload wiki
+        uses: actions/upload-artifact@v4
+        with:
+          name: wiki
+          path: culminating-mastermind/docs/_site
+
+  gh-pages:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+
+      - name: Move javadoc to wiki
+        run: |
+          mkdir -p wiki/components
+          mv javadoc/* wiki/components
 
       - name: Setup Pages
         id: pages
@@ -56,7 +91,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: culminating-mastermind/docs/_site
+          path: wiki
 
       - name: Deploy to GitHub Pages
         id: deployment
