--- a/.github/workflows/mastermind.yml
+++ b/.github/workflows/mastermind.yml
@@ -25,7 +25,7 @@ jobs:
           cd culminating-mastermind
           ./gradlew test
 
-  javadocs:
+  javadoc:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -75,6 +75,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    needs: [javadoc, wiki]
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v4
