--- a/culminating-mastermind/docs/_config.yml
+++ b/culminating-mastermind/docs/_config.yml
@@ -36,8 +36,12 @@ github_username: powersagitar
 theme: just-the-docs
 
 callouts:
+  note:
+    title: Note
+    color: blue
+
   important:
-    title: important
+    title: Important
     color: purple
 
 nav_external_links:
